#87 quick fix of modal backdrop overwrapping.

--- a/assets/sass/parts/_modal.scss
+++ b/assets/sass/parts/_modal.scss
@@ -9,3 +9,9 @@
   }
 }
 
+// TODO: Temporary avoid overwrapping.
+.no-modal-background{
+  .modal-backdrop{
+    display: none !important;
+  }
+}
